[package]
name = "rskai"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "interactive shell framework written in rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
rustyline = "12.0.0"
